added trade logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=Torus23TOP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=vowa.legun@gmail.com
+spring.mail.password=aisv innc vcme vkqr
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
