--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/trade
-spring.datasource.username=root
-spring.datasource.password=Torus23TOP
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/trade
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD:Torus23TOP}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
