--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/trade
 spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_ROOT_PASSWORD:Torus23TOP}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD:123123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=vowa.legun@gmail.com
-spring.mail.password=aisv innc vcme vkqr
+spring.mail.username=******@gmail.com
+spring.mail.password=******
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
